--- a/PhenoPad/App.xaml
+++ b/PhenoPad/App.xaml
@@ -20,9 +20,15 @@
 
 
             <SolidColorBrush x:Key="Background_Temp" Color="#9A0089"/>
-            <SolidColorBrush x:Key="Background_0" Color="#038387"/> <!--some gray-->
-            <SolidColorBrush x:Key="Background_1" Color="#498205"/> <!--some green-->
-            <SolidColorBrush x:Key="Background_2" Color="#0063B1"/> <!--some blue-->
+            
+            <SolidColorBrush x:Key="Background_0" Color="#038387" /> <!--some gray-->
+            <SolidColorBrush x:Key="Background_1" Color="#498205" /> <!--some green-->
+            <SolidColorBrush x:Key="Background_2" Color="#0063B1" /> <!--some blue-->
+            <SolidColorBrush x:Key="Background_3" Color="#E3008C" /> <!--some purple-->
+            <SolidColorBrush x:Key="Background_4" Color="#EF6950" /> <!--warm skin color -->
+            <SolidColorBrush x:Key="Background_5" Color="#724F2F" /> <!--some brown-->
+            <SolidColorBrush x:Key="Background_6" Color="#744D19" /> <!--some other purple-->
+
             <SolidColorBrush x:Key="Background_99" Color="#9A0089"/>
             <!--some blue-->
         </ResourceDictionary>
