--- a/PhenoPad/SpeechPage.xaml
+++ b/PhenoPad/SpeechPage.xaml
@@ -317,6 +317,12 @@
                     <ComboBoxItem
                         Content="Speaker 1"
                         Background="{StaticResource Background_0}"/>
+                    
+                    <!-- Add if we want to start with 2 speakers-->
+                    <ComboBoxItem
+                        Content="Speaker 2"
+                        Background="{StaticResource Background_1}"/>
+                    
                 </ComboBox>
                 <TextBlock x:Name="speakerNumTxt" Text="Number of Speakers: "
                            Margin="0"
